--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,29 +1,17 @@
-Package: recountmethylation
-Version: 0.1.1
-Title: Access and analyze the Recount Methylation database
-Authors@R: c(person(c("Sean", "K"), "Maden", role = c("cre", "aut"),
-        email = "maden@ohsu.edu"),
-    person("Reid F", "Thompson", role = "aut"),
-    person("Kasper D", "Hansen", role = "aut", email = "hansen@jhsph.edu"),
-    person("Abhi", "Nellore", role = "aut", email = "nellore@ohsu.edu"))
-Description: Access and analyze data from the recount methylation database.
+Package: jR
+Version: 0.0
+Title: Image decomp package
+Authors@R: person(c("Sean"), "Maden", role = c("cre", "aut"), email = "maden.edu")
+Description: Image decomp, palette selection
 License: Artistic-2.0
 Encoding: UTF-8
-URL: https://github.com/metamaden/recountmethylation
-BugReports: https://github.com/metamaden/recountmethylation/issues
+URL: https://github.com/metamaden/juicyimageR
+BugReports: https://github.com/metamaden/juicyimageR
 LazyData: FALSE
 Depends: R (>= 3.5.0)
 Imports:
-    minfi,
-    rhdf5,
-    S4Vectors,
-    RCurl,
-    methods,
-    utils
-Suggests:
-    HDF5Array,
-    knitr,
-    testthat
-VignetteBuilder: knitr
-biocViews: DNAMethylation, Epigenetics, Microarray, MethylationArray
+    imager,
+    fpc,
+    scales,
+    dplyr
 RoxygenNote: 7.1.0
